--- a/index.html
+++ b/index.html
@@ -5,8 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
+    <link rel="stylesheet" href="./style/main.css">
 </head>
 <body>
-    
+    <div class="top">
+        <header>
+            <h1 class="logo-text">Header Logo</h1>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </header>
+        <section class="first-content">
+            <div class="f-left">
+                <h2 class="hero-main-text">This website is awesome</h2>
+                <p class="hero-secondary-text">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="f-right">
+                <img src="https://source.unsplash.com/random/600x300?apple" alt="some random image for placeholder">
+            </div>
+        </section>
+    </div>
+    <main>
+        <section class="second-content">
+            <h2>Some random information</h2>
+            <div class="card-container">
+                <div class="card">
+                    <img src="https://source.unsplash.com/random/300x300?apple" alt="some random image for placeholder">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="https://source.unsplash.com/random/300x300?apple" alt="some random image for placeholder">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="https://source.unsplash.com/random/300x300?apple" alt="some random image for placeholder">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="https://source.unsplash.com/random/300x300?apple" alt="some random image for placeholder">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </section>
+        <section class="third-content">
+            <blockquote>
+                This is an inspiring quote, or a testimonial from a customer, Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </blockquote>
+            <div class="cite">
+                <cite>-Thor God of Thunder</cite>
+            </div>
+        </section>
+        <section class="fourth-content">
+            <div class="box">
+                <div class="box-left">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="box-right">
+                    <button>Sign Up</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <p>Copyright &copy; The Odin Project 2021</p>
+        </div>
+    </footer>
 </body>
 </html>
